# aonyx-agent

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SOUL.md  _scan.txt  release.toml  rust-toolchain.toml
.bmad/: agents-catalog-plan.md  architecture.md  brief.md  cron-plan.md  decisions.md  desktop-v2-architecture.md  desktop-v2-plan.md  first-run-wizard-plan.md  memory-palace-plan.md  multi-agent-plan.md  prd.md  rag-in-app-prd.md  settings-org-plan.md  skills-tools-plan.md  tool-calling-plan.md  vague4-architecture.md  vague4-brief.md  vague4-prd.md
.github/workflows/: ci.yml  desktop.yml  release.yml  site.yml
crates/aonyx-adapters/: Cargo.toml
crates/aonyx-adapters/src/: discord.rs  lib.rs  openai_server.rs  telegram.rs
crates/aonyx-agent/: Cargo.toml
crates/aonyx-agent/src/: agents.rs  approval.rs  backup.rs  classifier.rs  compaction.rs  config.rs  images.rs  lib.rs  main.rs  reflect.rs  runner.rs  secrets.rs  serve.rs  session.rs  setup.rs  subagent.rs  theme.rs  tui.rs  welcome.rs
crates/aonyx-api/: Cargo.toml
crates/aonyx-api/src/: agent.rs  auth.rs  error.rs  lib.rs  memory.rs  meta.rs  openai.rs  routes.rs  server.rs  sessions.rs  state.rs  streaming.rs
crates/aonyx-cli/: Cargo.toml
crates/aonyx-cli/src/: config.rs  images.rs  main.rs  pricing.rs  session.rs  theme.rs  tui.rs
crates/aonyx-core/: Cargo.toml
crates/aonyx-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/aonyx-llm/: Cargo.toml
crates/aonyx-llm/src/: anthropic.rs  claude_code.rs  lib.rs  lm_studio.rs  nous_portal.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs  retry.rs  router.rs
crates/aonyx-mcp/: Cargo.toml
crates/aonyx-mcp/src/: client.rs  lib.rs  server.rs
crates/aonyx-memory/: Cargo.toml
crates/aonyx-memory/src/: chunks.rs  cross_link.rs  diary.rs  embed.rs  hybrid.rs  inmem.rs  kg.rs  lib.rs  palace.rs  sessions.rs  splitter.rs  time_machine.rs
crates/aonyx-skills/: Cargo.toml
crates/aonyx-skills/skills/built_in/: code-review.skill.md  data-analyst.skill.md  doc-writer.skill.md  incident-response.skill.md  plan.skill.md  systematic-debugging.skill.md
crates/aonyx-skills/src/: engine.rs  lib.rs  loader.rs  miner.rs  schema.rs
crates/aonyx-tools/: Cargo.toml
crates/aonyx-tools/src/: bash.rs  browser.rs  exec.rs  fs.rs  git.rs  lib.rs  media.rs  memory.rs  plugins.rs  registry.rs  sandbox.rs  undo.rs  web.rs
crates/aonyx-tui/: Cargo.toml
crates/aonyx-tui/src/: lib.rs
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
desktop/scripts/: stage-sidecar.sh
desktop/src/: App.jsx  app.js  i18n.js  index.css  index.html  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: .gitignore
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/agent/: ApprovalCard.jsx  Markdown.jsx  Message.jsx
desktop/src/components/auth/: SignInModal.jsx
desktop/src/components/ui/: EmptyState.jsx  PageHeader.jsx  StatCard.jsx
desktop/src/config/: bridge.js
desktop/src/context/: AgentContext.jsx  AuthContext.jsx  LanguageContext.jsx  ThemeContext.jsx
desktop/src/layout/: AppShell.jsx  ProjectPicker.jsx  Sidebar.jsx  TitleBar.jsx
desktop/src/services/: accountService.js  agentService.js  agentsService.js  configService.js  messagingService.js  setupService.js
desktop/src/views/: About.jsx  Agents.jsx  Chat.jsx  Dashboard.jsx  KnowledgeGraph.jsx  Mcp.jsx  MemoryHealth.jsx  Messaging.jsx  Projets.jsx  Settings.jsx  SettingsHub.jsx  SkillsTools.jsx  Stats.jsx  index.jsx
desktop/src/views/wizard/: BootstrapStep.jsx  ChoiceStep.jsx  ProviderStep.jsx  Wizard.jsx
docs/: architecture-overview.md  releasing.md
examples/: hello-aonyx.md
examples/plugins/: hello.lua
