[package]
name = "aonyx-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aonyx Agent — channel adapters (Telegram, Discord, OpenAI-compat HTTP) — Vague 2"

[dependencies]
# Depend ONLY on aonyx-core (types + Result). The agent loop is injected
# by the binary via the `AgentHandler` trait, so there is no dependency
# cycle with `aonyx-agent`.
aonyx-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# tokio: required in the BASE crate for the streaming `AgentHandler::handle_stream`
# channel (`mpsc`) — NOT behind a feature, so every adapter can stream and the
# trait compiles in the default build.
tokio = { workspace = true }

# Heavy platform SDKs are opt-in so the default `aonyx` binary stays lean.
# Telegram (Phase TT):
teloxide = { version = "0.13", default-features = false, features = ["rustls", "ctrlc_handler"], optional = true }
# Discord (Phase UU):
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }
# OpenAI-compatible HTTP server (Phase VV):
axum = { version = "0.7", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
telegram = ["dep:teloxide"]
discord = ["dep:serenity"]
openai-server = ["dep:axum", "dep:serde", "dep:serde_json"]
