[package]
name = "aonyx-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The agent with a real memory palace — Knowledge Graph + Hybrid Search + Time-machine. Agent loop + the `aonyx` CLI."

# Library: the agent loop, compaction, classifier, approval gate, subagents.
[lib]
name = "aonyx_agent"
path = "src/lib.rs"

# Binary: the `aonyx` command-line app (merged from the former aonyx-cli).
[[bin]]
name = "aonyx"
path = "src/main.rs"

[dependencies]
# Workspace crates
aonyx-core = { workspace = true }
aonyx-llm = { workspace = true }
aonyx-memory = { workspace = true }
aonyx-skills = { workspace = true }
aonyx-tools = { workspace = true }
aonyx-mcp = { workspace = true }
aonyx-adapters = { workspace = true }
# Shared
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
# CLI / TUI (formerly aonyx-cli)
clap = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = "5"
termimad = "0.31"
ratatui = { workspace = true }
ratatui-core = "0.1"
crossterm = { workspace = true }
tui-textarea = "0.7"
tui-markdown = "0.3"
nucleo-matcher = "0.3"
walkdir = "2"
glob = "0.3"
notify-rust = "4"
similar = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
base64 = "0.22"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
# Phase AAA — encrypted palace backup (cloud-sync)
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
# Phase SS — onboarding wizard + secure key storage.
# Linux backend = the Secret Service over PURE-RUST zbus (`async-secret-service`),
# NOT `sync-secret-service` which links the C `libdbus` (absent on CI / minimal
# hosts). The `async-io` executor (not `tokio`) drives it, so keyring's internal
# `block_on` never nests inside our `#[tokio::main]` runtime.
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "async-secret-service", "crypto-rust", "async-io"] }
dialoguer = { version = "0.11", features = ["password"] }

[features]
default = []
# Channel adapters (Phase TT-VV) — opt-in; pull heavy SDKs only when enabled.
telegram = ["aonyx-adapters/telegram"]
discord = ["aonyx-adapters/discord"]
openai-server = ["aonyx-adapters/openai-server"]
lua-plugins = ["aonyx-tools/lua-plugins"]
browser = ["aonyx-tools/browser"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
