[package]
name = "aonyx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aonyx Agent — the `aonyx` command-line binary"

[[bin]]
name = "aonyx"
path = "src/main.rs"

[dependencies]
aonyx-core = { workspace = true }
aonyx-agent = { workspace = true }
aonyx-memory = { workspace = true }
aonyx-llm = { workspace = true }
aonyx-skills = { workspace = true }
aonyx-tools = { workspace = true }
aonyx-mcp = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = "5"
termimad = "0.31"
chrono = { workspace = true }
ratatui = { workspace = true }
ratatui-core = "0.1"
crossterm = { workspace = true }
tui-textarea = "0.7"
tui-markdown = "0.3"
nucleo-matcher = "0.3"
walkdir = "2"
notify-rust = "4"
similar = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

[dev-dependencies]
tempfile = "3"
