[package]
name = "aonyx-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aonyx Agent — memory palace (KG + diary + hybrid search + time-machine)"

[dependencies]
aonyx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Real backends (rusqlite, fastembed-rs, hnsw_rs, tree-sitter) will be added as
# each subsystem is implemented; the V1 scaffold ships an in-memory stub.

[dev-dependencies]
tokio = { workspace = true }
