[package]
name = "aonyx-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aonyx Agent — memory palace (KG + diary + hybrid search + time-machine)"

[dependencies]
aonyx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }

# fastembed-rs, hnsw_rs, tree-sitter join when their subsystems land.

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
