[package]
name = "aonyx-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aonyx Agent — memory palace (KG + diary + hybrid search + time-machine)"

[dependencies]
aonyx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }

# Local embeddings (RG1 / ADR-005 / ADR-009) — ONNX via fastembed-rs, behind
# the `rag` feature so the default binary stays lean. hnsw_rs + tree-sitter
# land with Phase 2 (HNSW ANN + AST splitter).
fastembed = { version = "5", optional = true }

[features]
# Pulls the local ONNX embedder ([`LocalEmbedder`]). Enabled by the `aonyx`
# binary's own `rag` feature and the `-full` build.
rag = ["dep:fastembed"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
