[package]
name = "aonyx-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Aonyx Agent — built-in tools (fs, bash, git, exec, web, memory)"

[dependencies]
aonyx-core = { workspace = true }
aonyx-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
glob = "0.3"
walkdir = "2"
regex = "1"
reqwest = { workspace = true }
pdf-extract = "0.7"
base64 = "0.22"
# Lua plugins (Phase WW) — opt-in; vendored Lua 5.4 compiled from source.
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"], optional = true }
# Browser automation (Phase YY) — headless Chrome/Chromium over CDP.
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"], optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
lua-plugins = ["dep:mlua"]
browser = ["dep:chromiumoxide", "dep:futures"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
uuid = { workspace = true }
